style.css
* {
    margin: 0;
    padding: 0;
}

body {
    background-color: white;
    font-family: 'Lexend Mega', sans-serif;
}

.header {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.header__title {
    margin: 32px auto;
    font-size: 1.5rem;
}

.header__nav {
    border-top: 4px solid black;
    border-bottom: 4px solid black;
    width: 100%;
    height: 60px;
    font-size: 1.2rem;
    display: flex;
    align-items: center;
}

.header__nav__item {
    margin: 32px;
    text-decoration: none;
    color: black;
    line-height: 320%;
    padding: 0 16px;
}

.header__nav__item:hover {
    background-color: black;
    color: white;
    font-weight: bold;
    cursor: pointer;
}

section.main {
    display: flex;
    justify-content: center;
    gap: 86px;
    margin: 15vh 10vw;
}

.profile-container {
    display: flex;
    flex-direction: column;
    padding: 16px 16px;
    background-color: #90EE90;
    border-radius: 16px;
    border: 4px solid black;
    -webkit-box-shadow: 6px 6px 0px 0px rgba(0,0,0,1);
    -moz-box-shadow: 6px 6px 0px 0px rgba(0,0,0,1);
    box-shadow: 6px 6px 0px 0px rgba(0,0,0,1);
    transition: 0.3s;
}

.profile-container:hover {
    transform: scale(1.025);
    -webkit-box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
    -moz-box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
    box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
}

.at-name {
    width: 100%;
    text-align: center;
    margin: 16px 0;
    font-size: 1.2rem;
}

.profile-pic {
    height: 350px;
    width: 350px;
    border-radius: 16px;
    border: 4px solid black;
}

.presentation {
    margin: 32px 0;
}

.name {
    font-size: 2rem;
}

.position {
    font-weight: 300;
}

.links {
    display: flex;
    gap: 16px;
    margin: 16px 0;
}

.link-button {
    padding: 8px;
    background-color: aqua;
    border: 2px solid black;
    border-radius: 8px;
    width: fit-content;
    color: black;
    text-decoration: none;
    display: flex;
    align-items: center;
    padding: 8px 16px;
}

.link-shadow {
    -webkit-box-shadow: 3px 3px 0px 0px rgba(0,0,0,1);
    -moz-box-shadow: 3px 3px 0px 0px rgba(0,0,0,1);
    box-shadow: 3px 3px 0px 0px rgba(0,0,0,1);
    transition: 0.3s;
}

.link-shadow:hover {
    transform: scale(1.025);
    -webkit-box-shadow: 6px 6px 0px 0px rgba(0,0,0,1);
    -moz-box-shadow: 6px 6px 0px 0px rgba(0,0,0,1);
    box-shadow: 6px 6px 0px 0px rgba(0,0,0,1);
}

.icon {
    margin: 0px 8px;
}

.github-link {
    background-color: #90EE90;
}

.linkedin-link {
    background-color: #69D2E7;
}

.mail-link {
    background-color: #F4D738;
}

.about-me-text {
    width: 640px;
}

.experience {
    margin: 10vh 5vw;
}

.sub-title {
    font-size: 2rem;
}

.sub-title-container {
    border-bottom: 8px solid #F4D738;
    width: fit-content;
    transition: 0.3s;
}

.experience-container {
    margin-top: 64px;
    margin-bottom: 82px;
}

.experience-title {
    font-size: 1.6rem;
}

.experience-company {
    font-size: 1.3rem;
    font-weight: 300;
}

.experience-description {
    margin-left: 24px;
    font-size: 1.2rem;
    font-weight: 300;
    margin-top: 24px;
}

.experience-flex {
    display: flex;
    justify-content: space-between;
}

.shape {
    width: 250px;
    height: 250px;
    transition: 0.3s;
}

.personal-projects-flex {
    display: flex;
    justify-content: center;
}

.shape:hover {
    transform: scale(1.075);
}

.cards-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.card {
    display: flex;
    padding: 12px 24px;
    border: 4px solid black;
    border-radius: 16px;
    -webkit-box-shadow: 6px 6px 0px 0px rgba(0,0,0,1);
    -moz-box-shadow: 6px 6px 0px 0px rgba(0,0,0,1);
    box-shadow: 6px 6px 0px 0px rgba(0,0,0,1);
    margin: 32px 24px;
    transition: 0.3s;
    text-decoration: none;
    color: black;
    gap: 64px;
}

.card:hover {
    transform: scale(1.05);
    -webkit-box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
    -moz-box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
    box-shadow: 10px 10px 0px 0px rgba(0,0,0,1);
}

.project-info {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
}

.project-title {
    font-size: 2rem;
    width: 400px;
}

.project-description {
    font-size: 1rem;
    width: 400px;
    margin-top: 8px;
}

.techs {
    display: flex;
    gap: 16px;
    margin: 16px 0;
    width: 500px;
}

.tech {
    border: 2px solid black;
    border-radius: 32px;
    padding: 8px 12px;
    -webkit-box-shadow: 4px 4px 0px 0px rgba(0,0,0,1);
    -moz-box-shadow: 4px 4px 0px 0px rgba(0,0,0,1);
    box-shadow: 4px 4px 0px 0px rgba(0,0,0,1);
}

.app-image {
    border-radius: 16px;
}

.card-bg-yellow {
    background-color: #FDFD96;
}

.card-bg-lightblue {
    background-color: #DAF5F0;
}

.card-bg-beige {
    background-color: #F8D6B3;
}

.card-bg-pink {
    background-color: #FCDFFF;
}

.tech-bg-blue {
    background-color: #69D2E7;
}

.tech-bg-red {
    background-color: #FF7A5C;
}

.tech-bg-pink {
    background-color: #FFB2EF;
}

.tech-bg-green {
    background-color: #90EE90;
}

section.blog {
    height: 50vh;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.blog-alert-title {
    font-size: 2.5rem;
    text-align: center;
}

.blog-alert-subtitle {
    font-size: 1rem;
    font-weight: 400;
    margin-top: 16px;
    text-align: center; 
}

.go-to-blog-button {
    text-decoration: none;
    color: black;
    font-weight: bold;
    padding: 16px 64px;
    background-color: #F4D738;
    border: 4px solid black;
    border-radius: 8px;
    -webkit-box-shadow: 4px 4px 0px 0px rgba(0,0,0,1);
    -moz-box-shadow: 4px 4px 0px 0px rgba(0,0,0,1);
    box-shadow: 4px 4px 0px 0px rgba(0,0,0,1);
    transition: 0.3s;
    margin-top: 32px;
}

.go-to-blog-button:hover {
    transform: scale(1.05);
    -webkit-box-shadow: 8px 8px 0px 0px rgba(0,0,0,1);
    -moz-box-shadow: 8px 8px 0px 0px rgba(0,0,0,1);
    box-shadow: 8px 8px 0px 0px rgba(0,0,0,1);
}

.thanks {
    font-size: 3rem;
    text-align: center;
    margin: 32px 16px;
    margin-bottom: 128px;
}

.b {
    font-weight: 800;
}

.b-blue {
    color: #69D2E7;
}

.b-yellow {
    color: #F4D738;
}

.b-green {
    color: #90EE90;
}

.b-red {
    color: #FF7A5C;
}

.b-pink {
    color: #FFB2EF;
}

@media only screen and (max-width: 1250px) and (min-width: 1024px){
    .about-me-text {
        width: 460px;
    }

    .link-button {
        font-size: 0.65rem;
    }

    section.main {
        gap: 32px;
        margin: 10vh 16px;
        justify-content: space-evenly;
    }

    .name {
        font-size: 1.7rem;
    }

}

@media only screen and (max-width: 1024px) and (min-width: 740px) {
    section.main {
        flex-direction: column;
        align-items: center;
        flex-direction: column;
        width: fit-content;
        margin: auto;
        gap: 32px;
        margin-top: 5vh;
    }

    .card {
        flex-direction: column-reverse;
        justify-content: center;
        align-items: center;
    }

    .project-info {
        align-items: center;
        justify-content: center;
    }

    .project-info > p {
        text-align: center;
    }

    .app-image {
        margin: 16px 0;
    }

}

@media only screen and (max-width: 740px) and (min-width: 425px){
    section.main {
        align-items: center;
        flex-direction: column;
        gap: 32px;
        margin: 10vh 5vw;
    }

    html {
        font-size: 14px;
    }

    .about-me {
        margin-top: 64px;
    }

    .about-me-text {
        width: unset;
    }

    .links {
        flex-wrap: wrap;
        justify-content: center;
    }

    .profile-pic {
        height: 225px;
        width: 225px;
    }

    .header__nav {
        font-size: 1rem;
    }

    .header__nav__item {
        margin: 0 16px;
    }

    .experience-flex {
        flex-direction: column;
        align-items: flex-end;
    }

    .shape {
        width: 170px;
        height: 170px;
        margin-top: 32px;
    }

    .card {
        flex-direction: column-reverse;
        justify-content: center;
        align-items: center;
        padding: 6px 12px;
    }

    .project-info {
        align-items: center;
        justify-content: center;
        width: unset;
    }

    .project-description {
        width: unset;
    }

    .project-info > p {
        text-align: center;
        width: unset;
    }

    .app-image {
        margin: 16px 0;

    }

    .techs {
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
        width: unset;
    }

}

@media only screen and (max-width: 425px) {
    section.main {
        align-items: center;
        flex-direction: column;
        gap: 32px;
        margin: 12vh 5vw;
    }

    html {
        font-size: 14px;
    }

    .about-me {
        margin-top: 64px;
    }

    .name {
        font-size: 1.8rem;
    }

    .about-me-text {
        width: unset;
    }

    .links {
        flex-wrap: wrap;
        justify-content: center;
    }

    .profile-pic {
        height: 225px;
        width: 225px;
    }

    .header__nav {
        font-size: 1rem;
    }

    .header__nav__item {
        margin: 0 16px;
    }

    .experience-flex {
        flex-direction: column;
        align-items: flex-end;
    }

    .shape {
        margin-top: 32px;
        width: 100px;
        height: 100px;
    }

    .card {
        flex-direction: column-reverse;
        justify-content: center;
        align-items: center;
        padding: 3px 6px;
        gap: 32px;
    }

    .sub-title {
        font-size: 1.7rem;
    }

    .project-title {
        font-size: 1.40rem;
        width: unset;
    }

    .project-info {
        align-items: center;
        justify-content: center;
        width: unset;
    }

    .project-info > p {
        text-align: center;
    }

    .project-description {
        width: unset;
    }

    .app-image {
        margin: 16px 0;
        width: 280px;
        height: 150px;
    }

    .techs {
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
        width: unset;
    }
}

